# whatsapp-collector

./: .gitignore  LICENSE  PROMPT_HISTORY.md  README.md  pyproject.toml
native-macos/: Package.resolved  Package.swift
native-macos/Sources/WhatsAppCollectorNative/App/: WhatsAppCollectorNativeApp.swift
native-macos/Sources/WhatsAppCollectorNative/Models/: AppSection.swift  CollectorConfiguration.swift  CollectorModels.swift  UpdateModels.swift
native-macos/Sources/WhatsAppCollectorNative/Services/: CollectorBridge.swift  UpdateAvailabilityService.swift
native-macos/Sources/WhatsAppCollectorNative/Stores/: CollectorStore.swift  UpdateMonitor.swift
native-macos/Sources/WhatsAppCollectorNative/Support/: AppMetadata.swift  (+3 more)
native-macos/Support/: generate_icon.swift  native_bridge.py
script/: build_and_run.sh
scripts/: __init__.py  build_macos_app.py  build_zipapp.py  generate_sparkle_appcast.sh  scheduled_export.sh
src/whatsapp_collector/: __init__.py  attachment_store.py  chrome_session.py  cli.py  collector.py  devtools_bridge.py  export_quality.py  export_safety.py  launcher.py  models.py  parsing.py  scheduler.py  web_ui.py
src/whatsapp_collector/assets/: chrome_devtools.mjs
tests/: test_attachment_store.py  test_branding.py  test_chrome_devtools_helper.py  test_chrome_session.py  test_cli.py  test_collector.py  test_devtools_bridge_native.py  test_export_quality.py  test_export_safety.py  test_launcher.py  test_macos_app.py  test_native_bridge.py  test_packaging.py  test_parsing.py  test_scheduler.py  test_web_ui.py  test_zipapp.py
(+10 files in other folders)
