[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-collector"
version = "0.3.1"
description = "Read-only WhatsApp Web collector for macOS Chrome sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "WhatsApp Collector contributors" }
]
keywords = ["whatsapp", "whatsapp", "chrome", "collector", "macos", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications",
  "Topic :: Utilities",
]
dependencies = []

[project.scripts]
whatsapp-collector = "whatsapp_collector.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
whatsapp_collector = ["assets/chrome_devtools.mjs"]
